# opengl

./: CMakeLists.txt
include/core/: bufferlayout.h  indexbuffer.h  macros.h  renderer.h  shader.h  texture.h  vertexarray.h  vertexbuffer.h
res/shaders/: frag.glsl  vert.glsl
src/: indexbuffer.cpp  main.cpp  renderer.cpp  shader.cpp  texture.cpp  vertexarray.cpp  vertexbuffer.cpp
